Update styling to make sure that code blocks don't overflow in tabs

--- a/scss/_tabs.scss
+++ b/scss/_tabs.scss
@@ -612,13 +612,14 @@ $sideways-tabs-height   : 1rem;
 .tab-pane > .body-code pre
 {
   margin : -1px;
+  max-height: 100%;
+  max-width: 100%;
+  overflow: auto;
 }
 
 // UI fix to ensure that tabs containing code do not go over buttons
 .tab-pane > .body-code code
 {
-  max-height : 100%;
-  overflow   : auto;
   display    : block;
 }
 
